Fix bio spacing

--- a/pages/bio-style.css
+++ b/pages/bio-style.css
@@ -67,6 +67,10 @@
   display: block;
 }
 
+.biographie p {
+  text-wrap: pretty;
+}
+
 
 
 /*
